[package]
name = "skcos"
version = "0.1.0"
authors = ["Ido Ben-Natan <ido.bennatan@gmail.com>"]
edition = "2018"

[dependencies]
serde_derive = "1.0.34"
bincode = "1.0.0"
serde = "1.0.34"
tokio = "0.1.18"
futures = "0.1.26"

[[bin]]
name = "relay-agent"
path = "src/relay_agent.rs"

[[bin]]
name = "reverse-socks-server"
path = "src/reverse_socks_server.rs"
